--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,52 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-.app{
+
+html,
+body {
+  width: 100%;
+  height: 100%;
+  padding: 0px;
+  overflow-x: hidden;
   background-image: radial-gradient(rgb(177, 165, 250) , rgb(13, 245, 253) , rgb(0, 140, 255) );
-padding-bottom: 14%;
+  background-size: 100vw;
+  margin: 0px;
+  font-family: "Montserrat", sans-serif;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
 }
 * {
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
 
+}
+nav {
+  display: inline;
+  position: fixed;
+  margin-bottom: 10%;
+  width: 100%;
+  z-index: 999;
+  border-radius: 3px;
+  height: 50px;
+}
+nav a {
+  font-size: 20px;
+  padding: 11px;
+  border-right: #fdbeff solid 1px;
+  box-shadow: 0px 0px 10px 1px #acb8d1;
+  color: rgb(0, 0, 0);
+  text-decoration: none;
+  background-color: #0cb6e0d7;
+}
+nav a:hover {
+  color: #000000;
+  background-color: rgba(76, 0, 255, 0.459);
+}
+.nav-bar {
+  top: 0px;
+  width: 100%;
+}
+h1.delaine {
+  font-size: 47px;
+  margin: 33px;
 }
 .writing-excercises-icon-descriptor {
   font-size: 20px;
@@ -57,19 +97,10 @@ padding: 1%;
   border-radius: 12px;
   background-color: rgb(207, 168, 243);
 }
-.home{
-  top:400px;
-  margin:auto;
-  border: 1px solid blueviolet;
-  box-shadow: 0 0 10px 5px blueviolet;
-padding: 13px;
-  border-radius: 12px;
-  color: white;
-}
+
 .nav a {
   margin-left: 10%;
   margin-top: 16%;
-
   font-size: 120%;
   height: 100%;
   display: inline-flex;
@@ -153,7 +184,6 @@ padding: 13px;
   float:center;
   padding: 10px;
   background-color: #24d8abf5;
-
   border: 2px solid #ffffff;
   box-shadow: 0 0 5px 5px #f1f1f1c5;
   border-radius: 10px;
@@ -255,9 +285,10 @@ li {
 
 /* Styles for view-Cards */
 .view-card {
-  background-color: rgb(249, 255, 239);
+  background-color: rgb(254, 149, 240);
   display: grid;
-  width: 100%;
+  overflow-x: hidden;
+  width: 500px;
   height: 50%;
   overflow:scroll;
   border: 1.25px solid rgb(119, 113, 113);
