--- a/css/style.css
+++ b/css/style.css
@@ -75,12 +75,10 @@ nav a:hover {
   margin: auto;
 }
 
-#title {
-  position: absolute;
-  left: 200px;
-  top: 0;
-  display: inline-block;
-  height: 100%;
+.page-title {
+  text-align: center;
+  margin-bottom: 100px;
+  font-size: 40px;
 }
 
 .home:hover {
@@ -154,13 +152,13 @@ nav a:hover {
   border-radius: 10px;
 }
 .newFormButton {
-  margin: 1%;
+  margin-top: 110px;
   float: center;
   padding: 5px;
   background-color: #2afd2abb;
   box-shadow: 0 0 5px 5px #f1f1f1c5;
   border-radius: 10px;
-  font-size:25px;
+  font-size: 20px;
 }
 .newFormButton:hover {
   margin: 1%;
@@ -183,10 +181,14 @@ nav a:hover {
 img {
   float: left;
   position: relative;
-  width: 100%;
+  width: 100px;
+  height: 100px;
+  background-color: #d3d3d3;
 }
 .img-container {
-  width: 40%;
+  width: 100px;
+  margin-right: auto;
+  margin-left: auto;
 }
 h5.character-charachter_name {
   color: white;
@@ -271,7 +273,7 @@ li {
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
 }
-.view-card-img- {
+.view-card-img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -380,7 +382,12 @@ li {
   text-align: right;
 }
 .char-img {
-  display: inline-block;
+  margin-top: 100px;
+  margin-bottom: 5px;
+  border: 1.5px solid red;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
 }
 .btn {
   cursor: pointer;
@@ -395,18 +402,16 @@ li {
 }
 .container {
   display: flex; /* or inline-flex */
-  margin-top: 100px;
+  margin-top: 130px;
   margin-left: auto;
   margin-right: auto;
-
-  width: 50%;
 }
 #atrribution {
   position: fixed;
   bottom: 0;
-  width: 100%;
+  padding: 10px;
   box-shadow: 0px 0px 5px #333, inset 0px 0px 2px #333;
-background-color: #acb8d154;
+  background-color: #acb8d154;
 }
 .btn:hover {
   background-color: rgba(230, 182, 182, 0.699);
@@ -445,8 +450,9 @@ background-color: #acb8d154;
   outline: solid 2px #ffffff;
 }
 /* Styles for Cards */
-.view-card-writ {
-  width: 400px;
+.view-card-char {
+  min-width: 300px;
+  width: 500px;
   height: 400px;
   border: 1.25px solid rgb(70, 68, 68);
   border-radius: 16px;
@@ -456,7 +462,11 @@ background-color: #acb8d154;
   overflow-x: hidden;
   font-size: 100%;
 }
-
+@media only screen and (max-width: 600px) {
+  .view-card-char {
+    width: 300px;
+  }
+}
 .view-card-writ:hover {
   box-shadow: 0 0 10px 5px rgba(201, 9, 175, 0.973);
 }
