--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,8 @@ body {
   background-image: linear-gradient(
     rgb(177, 165, 250),
     rgb(13, 245, 253),
+    rgb(18, 173, 179),
+
     rgb(0, 140, 255)
   );
   background-size: 100vw;
