--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ body {
   background-attachment: fixed;
   background-repeat: no-repeat;
 }
+#page-title{
+margin-top: 100px;
+color: #cf4ecf;
+font-size: 50px;
+}
 * {
   font-family: "Open Sans", sans-serif;
   box-sizing: border-box;
@@ -168,7 +173,6 @@ nav a:hover {
   color: rgb(0, 0, 0);
 }
 .char-blurb {
-  margin-top: 100px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
@@ -189,7 +193,6 @@ nav a:hover {
   min-width: 300px;
 }
 .plot p {
-  margin-top: 150px;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
