--- a/css/style.css
+++ b/css/style.css
@@ -186,8 +186,8 @@ nav a:hover {
   width: 50%;
   margin: auto;
 }
-.plot .view {
-  margin-top: 5px;
+.plot  {
+  margin-top: 200px;
   min-width: 300px;
 }
 .plot p {
@@ -288,7 +288,6 @@ li {
 
 label {
   font-weight: bold;
-  font-size: 20px;
   text-align: center;
 }
 
@@ -316,7 +315,7 @@ label {
 }
 
 .blurb {
-  margin: 20px;
+  margin: 5px;
   overflow: hidden;
   text-overflow: ellipsis;
   display: -webkit-box;
@@ -552,6 +551,7 @@ button:hover {
 }
 .view-card-writ {
   width: 300px;
+  min-height: fit-content;
   height: 300px;
   padding: 5px;
   margin: 3px;
@@ -560,9 +560,9 @@ button:hover {
   border-radius: 16px;
 }
 p {
-  padding: 3px;
+  padding: 1px;
   background-color: rgba(240, 255, 255, 0.699);
   border: 2px solid #ffffff;
-  box-shadow: 0 0 5px 5px #f1f1f1c5;
+  box-shadow: 0 0 2px 2px #f1f1f1c5;
   border-radius: 16px;
 }
